# videoAnalyzer

./: .gitignore  README.md  config.ini  config.json  test.py
admin/: db.sqlite3  requirements.txt
admin/admin/: settings.py  urls.py
admin/admin/admin/: settings.py
admin/app/: urls.py  views.py
admin/app/templates/app/: base_site.html  myplayer.html  sidebar.html  web_control.html  web_index.html  web_player.html  web_streams.html
admin/app/utils/: Analyzer.py  Config.py  ZLMediaKit.py
analyzer/: CMakeLists.txt  CMakeLists.txt.mac.bak  README.md  main.cpp
analyzer/BXC_StreamPusher/: .gitignore  BXC_StreamPusher.sln  CMakeLists.txt  README.md  实现一个零延迟摄像头拉流转码推流器.docx
analyzer/BXC_StreamPusher/StreamPusher/: Log.h  StreamPusher.cpp  StreamPusher.h  StreamPusher.vcxproj  StreamPusher.vcxproj.filters  main.cpp
analyzer/BXC_StreamPusher/yolo-bytetrack-tensorrt/tensorrtx-yolov8/: CMakeLists.txt
analyzer/BXC_StreamPusher/yolo-bytetrack-tensorrt/yolo/: CMakeLists.txt
data/: 推流命令.txt
webServer/: manage.py
webServer/webServer/: settings.py  urls.py  wsgi.py
www/live/test/: hls.m3u8
